--- a/impressum.html
+++ b/impressum.html
@@ -77,7 +77,7 @@
                         </li>
                         <li><a>Verwaltung</a>
                             <ul>
-                                <li><a href="team_organisation_finanzen.html">Finazen/Koordination</a>
+                                <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
                                 </li>
                                 <li><a href="#">Marketing/Werbefilm</a>
                                 </li>
