--- a/team_organisation_finanzen.html
+++ b/team_organisation_finanzen.html
@@ -58,6 +58,8 @@
                                 </li>
                                 <li><a href="team_tueroeffner.html">Türöffner</a>
                                 </li>
+                                <li><a href="#">Re-Engeneering</a>
+                                </li>
                             </ul>
                         </li>
                         <li><a>Elektronik/Software</a>
@@ -123,7 +125,7 @@
                         <article>
                             <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Finanzen.jpg" />
                         </article>
-                        <div >
+                        <div>
                             <article>
                                 <img class="image fit" src="images/Arbeitsergebnisse/Team_Organisation_Finanzen/Organisationsdiagramm.png" />
                             </article>
