--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -39,42 +39,74 @@
                 <li>
                     <a href="index.html">Home</a>
                     <ul>
-                        <li><a href="index.html#main">Crawler im Einsatz</a>
-                        </li>
                         <li><a href="index.html#banner">Teams</a>
                         </li>
-                        <li><a href="index.html#features1">Projektträger</a>
+                        <li><a href="index.html#video_film">Rund um das Analysefahrzeug</a>
+                        </li>
+                        <li><a href="index.html#Projektbeschreibung">Projektbeschreibung</a>
+                        </li>
+                        <li><a href="index.html#features1">Projekt-Betreuer</a>
                         </li>
                         <li><a href="index.html#features2">Studieninhalte</a>
-                        </li>
-                        <li><a href="index.html#footer">Stimmen</a>
                         </li>
                     </ul>
                 </li>
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a  >Elektronik &amp; Software</a>
+                        <li><a href="team_mechanik.html">Mechanik</a>
+                            <ul>
+                                <li><a href="team_mechanik_arm.html">Arm</a>
+                                </li>
+                                <li><a href="team_fahrwerk.html">Fahrwerk</a>
+                                </li>
+                                <li><a href="team_transportwagen.html">Transportwagen</a>
+                                </li>
+                                <li><a href="team_tueroeffner.html">Türöffner</a>
+                                </li>
+                                <li><a href="team_reengineering.html">Re-Engeneering</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a  >Fahrwerk</a>
+                        <li><a href="team_elektronik_software.html">Elektronik/Software</a>
+                            <ul>
+                                <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
+                                </li>
+                                <li><a href="team_kamerasteuerung.html">Kamera</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ANSTEUERUNG">Motorsteuerung</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_ROS">ROS</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_SENSORIK">Sensorik</a>
+                                </li>
+                                <li><a href="team_elektronik_software.html#ug_VERKABELUNG">Verkabelung/Gehäuse</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li><a  >Mechanik Arm</a>
-                        </li>
-                        <li><a  >Türöffner</a>
+                        <li><a>Verwaltung</a>
+                            <ul>
+                                <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
+                                </li>
+                                <li><a href="team_marketing_werbefilm.html">Marketing/Werbefilm</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="">Projektträger</a>
+                <!--                <li>
+                    <a  >Projektträger</a>
                     <ul>
                         <li><a  >Landes Kriminal Amt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
                     </ul>
-                </li>
+                </li>-->
 
-                <li><a href="left-sidebar.html">Sponsoren</a>
+                <li><a href="sponsoren.html">Sponsoren</a>
+                </li>
+                <li><a href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </nav>
