--- a/team_kamerasteuerung.html
+++ b/team_kamerasteuerung.html
@@ -41,6 +41,8 @@
                         </li>
                         <li><a href="index.html#video_film">Rund um das Analysefahrzeug</a>
                         </li>
+                        <li><a href="index.html#Projektbeschreibung">Projektbeschreibung</a>
+                        </li>
                         <li><a href="index.html#features1">Projekt-Betreuer</a>
                         </li>
                         <li><a href="index.html#features2">Studieninhalte</a>
@@ -50,21 +52,19 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a>Mechanik</a>
+                        <li><a href="team_mechanik.html">Mechanik</a>
                             <ul>
                                 <li><a href="team_mechanik_arm.html">Arm</a>
                                 </li>
                                 <li><a href="team_fahrwerk.html">Fahrwerk</a>
                                 </li>
-                                <li><a href="#">Transportwagen</a>
+                                <li><a href="team_transportwagen.html">Transportwagen</a>
                                 </li>
                                 <li><a href="team_tueroeffner.html">Türöffner</a>
                                 </li>
-                                <li><a href="#">Re-Engeneering</a>
-                                </li>
                             </ul>
                         </li>
-                        <li><a>Elektronik/Software</a>
+                        <li><a href="team_elektronik_software.html">Elektronik/Software</a>
                             <ul>
                                 <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
                                 </li>
@@ -84,7 +84,9 @@
                             <ul>
                                 <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
                                 </li>
-                                <li><a href="#">Marketing/Werbefilm</a>
+                                <li><a href="team_reengineering.html">Re-Engeneering</a>
+                                </li>
+                                <li><a href="team_marketing_werbefilm.html">Marketing/Werbefilm</a>
                                 </li>
                             </ul>
                         </li>
@@ -101,6 +103,8 @@
                 </li>-->
 
                 <li><a href="sponsoren.html">Sponsoren</a>
+                </li>
+                <li><a href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </nav>
@@ -125,7 +129,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Kamera.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Kamera.jpg" alt="Leider fehlt hier ein Bild"/>
                         </article>
 
                     </section>
@@ -138,7 +142,7 @@
                     </header>
                     <article id="main">
                         <p>
-                            Die Motivation zur Gründung des Teams Kamerasteuerung im Sommersemester 2015 resultiert aus der Tatsache, dass der Crawler bis dato über keinerlei visuelle Navigationsmöglichkeiten verfügte. Das heißt das Manövrieren erfolgte blind bzw. nur, wenn der Bediener Sichtkontakt zum Crawler hat. Da der Crawler in abgelegenen und nicht einsehbaren Bereichen eingesetzt wird, muss er sich selbst orientieren könne. Das Ziel ist es daher eine Umgebungskamerasystem und eine Navigationskamerasystem zu entwickeln, aufzubauen und am Crawler zu implementieren.
+                            Die Motivation zur Gründung des Teams Kamerasteuerung im Sommersemester 2015 resultiert aus der Tatsache, dass der Crawler bis dato über keinerlei visuelle Navigationsmöglichkeiten verfügte. Das heißt, dass das Manövrieren  blind erfolgte, bzw. nur, wenn der Bediener Sichtkontakt zum Crawler hat. Da der Crawler in abgelegenen und nicht einsehbaren Bereichen eingesetzt wird, muss er sich selbst orientieren können. Das Ziel ist es daher ein Umgebungskamerasystem und ein Navigationskamerasystem zu entwickeln, aufzubauen und am Crawler zu implementieren.
                         </p>
 
                     </article>
@@ -152,7 +156,7 @@
                 <article class="6u special">
                     <article>
                         <p>
-                            Um diese anspruchsvolle Aufgabe zu bewältigen hat sich das junge Team dann in drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es ein Gimbal zu entwickeln, um zum Eine die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so stabilisiert, das ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
+                            Um diese anspruchsvolle Aufgabe zu bewältigen hat sich das junge Team dann in die drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin, ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es, ein Gimbal zu entwickeln, um zum einen die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so zu stabilisieren, dass ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
                             <br> Ziel des Sommersemester 2015 ist es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase wird am Ende eine Spezifikation des Gesamtsystems erfolgen, wo im nächsten Semester die Umsetzung der Produktidee anknüpft. Zusätzlich wird im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
                         </p>
                     </article>
