--- a/team_tueroeffner.html
+++ b/team_tueroeffner.html
@@ -42,6 +42,8 @@
                         </li>
                         <li><a href="index.html#features1">Projekt-Betreuer</a>
                         </li>
+                        <li><a href="index.html#Projektbeschreibung">Projektbeschreibung</a>
+                        </li>
                         <li><a href="index.html#features2">Studieninhalte</a>
                         </li>
                     </ul>
@@ -49,21 +51,19 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a>Mechanik</a>
+                        <li><a href="team_mechanik.html">Mechanik</a>
                             <ul>
                                 <li><a href="team_mechanik_arm.html">Arm</a>
                                 </li>
                                 <li><a href="team_fahrwerk.html">Fahrwerk</a>
                                 </li>
-                                <li><a href="#">Transportwagen</a>
+                                <li><a href="team_transportwagen.html">Transportwagen</a>
                                 </li>
                                 <li><a href="team_tueroeffner.html">Türöffner</a>
                                 </li>
-                                <li><a href="#">Re-Engeneering</a>
-                                </li>
                             </ul>
                         </li>
-                        <li><a>Elektronik/Software</a>
+                        <li><a href="team_elektronik_software.html">Elektronik/Software</a>
                             <ul>
                                 <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
                                 </li>
@@ -83,7 +83,9 @@
                             <ul>
                                 <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
                                 </li>
-                                <li><a href="#">Marketing/Werbefilm</a>
+                                <li><a href="team_reengineering.html">Re-Engeneering</a>
+                                </li>
+                                <li><a href="team_marketing_werbefilm.html">Marketing/Werbefilm</a>
                                 </li>
                             </ul>
                         </li>
@@ -100,6 +102,8 @@
                 </li>-->
 
                 <li><a href="sponsoren.html">Sponsoren</a>
+                </li>
+                <li><a href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </nav>
@@ -124,7 +128,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Tueroeffner.png" />
+                            <img class="image fit" src="images/Gruppenbilder/SS15/Tueroeffner.png" alt="Leider fehlt hier ein Bild"/>
                         </article>
 
                     </section>
@@ -153,6 +157,7 @@
                         Im Wintersemester 2014/15 wurde der Türöffner komplett von der ursprünglichen Idee auf Blatt Papier in die Realität überführt. Jedoch war diese relativ einfach gefertigt und hatte trotz einwandfreier Gesamtfunktion viel Optimierungspotenzial gerade in Bereich Gewichtsreduzierung.
                     </p>
                     <p>Auf Grundlage dieser Erkenntnis haben wir im SS 2015 eine Gewichtsoptimierung und FEM-Simulation der einzelnen Komponenten des Türöffners durchgeführt und konnten somit das Gewicht Gesamtsystems-Türöffner von 7,17 kg auf 5,18 kg senken. Das entspricht einer Gewichtersparnis von 27,81 %.</p>
+                    <p>Das Team Türöffner wurde im WS15/16 aufgelöst, da am Türöffner vorübergehend kein weiterer Verbesserungsbedarf besteht.</p>
                 </article>
 
                 <article class="6u special">
