--- a/sponsoren.html
+++ b/sponsoren.html
@@ -40,6 +40,8 @@
                         </li>
                         <li><a href="index.html#video_film">Rund um das Analysefahrzeug</a>
                         </li>
+                        <li><a href="index.html#Projektbeschreibung">Projektbeschreibung</a>
+                        </li>
                         <li><a href="index.html#features1">Projekt-Betreuer</a>
                         </li>
                         <li><a href="index.html#features2">Studieninhalte</a>
@@ -49,21 +51,19 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a>Mechanik</a>
+                        <li><a href="team_mechanik.html">Mechanik</a>
                             <ul>
                                 <li><a href="team_mechanik_arm.html">Arm</a>
                                 </li>
                                 <li><a href="team_fahrwerk.html">Fahrwerk</a>
                                 </li>
-                                <li><a href="#">Transportwagen</a>
+                                <li><a href="team_transportwagen.html">Transportwagen</a>
                                 </li>
                                 <li><a href="team_tueroeffner.html">Türöffner</a>
                                 </li>
-                                <li><a href="#">Re-Engeneering</a>
-                                </li>
                             </ul>
                         </li>
-                        <li><a>Elektronik/Software</a>
+                        <li><a href="team_elektronik_software.html">Elektronik/Software</a>
                             <ul>
                                 <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
                                 </li>
@@ -83,7 +83,9 @@
                             <ul>
                                 <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
                                 </li>
-                                <li><a href="#">Marketing/Werbefilm</a>
+                                <li><a href="team_reengineering.html">Re-Engeneering</a>
+                                </li>
+                                <li><a href="team_marketing_werbefilm.html">Marketing/Werbefilm</a>
                                 </li>
                             </ul>
                         </li>
@@ -100,6 +102,8 @@
                 </li>-->
 
                 <li><a href="sponsoren.html">Sponsoren</a>
+                </li>
+                <li><a href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </nav>
