--- a/team_organisation_finanzen.html
+++ b/team_organisation_finanzen.html
@@ -39,6 +39,8 @@
                         </li>
                         <li><a href="index.html#video_film">Rund um das Analysefahrzeug</a>
                         </li>
+                        <li><a href="index.html#Projektbeschreibung">Projektbeschreibung</a>
+                        </li>
                         <li><a href="index.html#features1">Projekt-Betreuer</a>
                         </li>
                         <li><a href="index.html#features2">Studieninhalte</a>
@@ -48,21 +50,19 @@
                 <li>
                     <a href="">Teams</a>
                     <ul>
-                        <li><a>Mechanik</a>
+                        <li><a href="team_mechanik.html">Mechanik</a>
                             <ul>
                                 <li><a href="team_mechanik_arm.html">Arm</a>
                                 </li>
                                 <li><a href="team_fahrwerk.html">Fahrwerk</a>
                                 </li>
-                                <li><a href="#">Transportwagen</a>
+                                <li><a href="team_transportwagen.html">Transportwagen</a>
                                 </li>
                                 <li><a href="team_tueroeffner.html">Türöffner</a>
                                 </li>
-                                <li><a href="#">Re-Engeneering</a>
-                                </li>
                             </ul>
                         </li>
-                        <li><a>Elektronik/Software</a>
+                        <li><a href="team_elektronik_software.html">Elektronik/Software</a>
                             <ul>
                                 <li><a href="team_elektronik_software.html#ug_GUI">GUI</a>
                                 </li>
@@ -82,7 +82,9 @@
                             <ul>
                                 <li><a href="team_organisation_finanzen.html">Finanzen/Koordination</a>
                                 </li>
-                                <li><a href="#">Marketing/Werbefilm</a>
+                                <li><a href="team_reengineering.html">Re-Engeneering</a>
+                                </li>
+                                <li><a href="team_marketing_werbefilm.html">Marketing/Werbefilm</a>
                                 </li>
                             </ul>
                         </li>
@@ -99,6 +101,8 @@
                 </li>-->
 
                 <li><a href="sponsoren.html">Sponsoren</a>
+                </li>
+                <li><a href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </nav>
@@ -123,7 +127,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Finanzen.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/SS16/Finanzen.jpg" alt="Leider fehlt hier ein Bild"/>
                         </article>
                         <div>
                             <article>
