--- a/team_mechanik_arm.html
+++ b/team_mechanik_arm.html
@@ -166,7 +166,7 @@
                 <article 6u special>
                 <section class="container special">
                     <div class="videoWrapper">
-                        <video controls width="1400">
+                        <video controls width="100%">
                             <source src="videos/Arm/Arm_v2.mp4" type="video/mp4">
                             <source src="videos/Arm/Arm_v2.webm" type="video/webm">
                             <p>Dieser Browser unterstützt das Video nicht.</p>
