--- a/team_fahrwerk.html
+++ b/team_fahrwerk.html
@@ -198,7 +198,7 @@
                         
                         <section class="container special">
                             <div class="videoWrapper">
-                                <video controls width="680">
+                                <video controls width="100%">
                                     <source src="videos/Fahrwerk/fahrwerk_v2.mp4" type="video/mp4">
                                     <source src="videos/Fahrwerk/fahrwerk_v2.webm" type="video/webm">
                                     <p>Dieser Browser unterstützt das Video nicht.</p>
