--- a/team_marketing_werbefilm.html
+++ b/team_marketing_werbefilm.html
@@ -221,7 +221,7 @@
                         
                         <article>
 							<div class="videoWrapper">
-                                    <video controls width="320" autoplay loop>
+                                    <video controls width="100%" autoplay loop muted>
                                         <source src="videos/Arm/Arm_v2.mp4" type="video/mp4">
                                         <source src="videos/Arm/Arm_v2.webm" type="video/webm">
                                         <p>Dieser Browser unterstützt das Video nicht.</p>
@@ -235,7 +235,7 @@
                         
                         <article>
 							<div class="videoWrapper">
-                                    <video controls width="320" autoplay loop>
+                                    <video controls width="100%" autoplay loop muted>
                                         <source src="videos/Fahrwerk/fahrwerk_v2.mp4" type="video/mp4">
                                         <source src="videos/Fahrwerk/fahrwerk_v2.webm" type="video/webm">
                                         <p>Dieser Browser unterstützt das Video nicht.</p>
