--- a/team_elektronik_software.html
+++ b/team_elektronik_software.html
@@ -185,7 +185,8 @@
                 </article>
                 <article class="6u special">
                     <img class="image fit" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg" width="400" />
-                    <img class="image fit" src="#" width="400" alt="Leider fehlt hier ein Bild"/>
+                    <hr />
+                    <img class="image fit" src="images/Gruppenbilder/SS16/GUI.jpg" width="400" alt="Leider fehlt hier ein Bild"/>
                 </article>
             </div>
             <hr id="ug_SENSORIK">
