--- a/team_marketing_werbefilm.html
+++ b/team_marketing_werbefilm.html
@@ -230,7 +230,7 @@
                             <header>
 								<h3><a href="#">Minifilm zur Gruppe Arm</a></h3>
 							</header>
-                            <!--<p>Beschreibung</p>-->
+                            <p>Musik des Filmes von http://audio.ibeat.org/?ccm=/files/enoe/705</p>
 						</article>
                         
                         <article>
@@ -244,7 +244,7 @@
 							<header>
 								<h3><a href="#">Minifilm zur Gruppe Fahrwerk</a></h3>
 							</header>
-                            <!--<p>Beschreibung</p>-->
+                            <p>Musik des Filmes von http://audio.ibeat.org/?ccm=/files/enoe/705</p>
 						</article>
                         
                         <article>
