--- a/team_mechanik_arm.html
+++ b/team_mechanik_arm.html
@@ -129,7 +129,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/SS16/Arm.jpg" alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/WS1617/Arm.JPG" alt="Leider fehlt hier ein Bild"/>
                         </article>
                         
                     </section>
