--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                         </ul>
                                     </li>
                                     <li class="department dep-b">
-                                        <a><span>Elektronik/Sofrtware</span></a>
+                                        <a><span>Elektronik/Software</span></a>
                                         <ul class="sections">
                                             <li class="section"><a href="team_elektronik_software.html#ug_GUI"><span>GUI</span></a></li>
                                             <li class="section"><a href="team_kamerasteuerung.html"><span>Kamera</span></a></li>
@@ -216,8 +216,8 @@
                     </header>
                 </section>
                 <section class="container special">
-                    <p>Das Projekt, auch Crawler 2.0 genannt, ist ein Modul des Masters Mechatronik der Hochschule München (HM). Das Ziel des Projektmodules ist das erlernen der Fähigkeit, komplexe Entwicklungsprodukte, wie zum Beispiel den Crawler, selbstständig zu bearbeiten. Es soll auf die komplexen Aufgaben im betrieblichen Umfeld vorbereiten. Die Bearbeitung der Aufgabenstellung soll unternehmensnah in Teams erfolgen.</p>
-                    <p>Das Analysefahrzeug soll unwegsames Gelände überwinden können, soll Türen öffnen können und die gewonnenen Daten an den Nutzer übermitteln. Ein gedachtes Einsatzszenario wäre unter anderem, eine Treppe hinaufzufahren, eine Türe mit herkömlicher Klinke aufzuziehen und mit einer Kamera auszukundschaften, was sich hinter der Türe verbirgt.</p>
+                    <p>Das Projekt, auch Crawler 2.0 genannt, ist ein Modul des Masters Mechatronik der Hochschule München (HM). Das Ziel des Projektmodules ist das Erlernen der Fähigkeit, komplexe Entwicklungsprodukte, wie zum Beispiel den Crawler, selbstständig zu bearbeiten. Es soll auf die komplexen Aufgaben im betrieblichen Umfeld vorbereiten. Die Bearbeitung der Aufgabenstellung soll unternehmensnah in Teams erfolgen.</p>
+                    <p>Das Analysefahrzeug soll unwegsames Gelände überwinden können, soll Türen öffnen können und die gewonnenen Daten an den Nutzer übermitteln. Ein gedachtes Einsatzszenario wäre unter anderem, eine Treppe hinaufzufahren, eine Türe mit herkömmlicher Klinke aufzuziehen und mit einer Kamera auszukundschaften, was sich hinter der Türe verbirgt.</p>
                 <br>                   
                 </section>
              </article>
@@ -237,7 +237,7 @@
     <div class="wrapper style1" id="features1">
         <section class="container special">
             <header class="abstand">
-                <h2>Projekt Betreuer</h2>
+                <h2>Projektbetreuer</h2>
             </header>
             <div class="row">
                 <article class="6u special">
@@ -248,8 +248,8 @@
                     </header>
                     <h3>Kurzvita</h3>
                     <p>
-                        Über 10 Jahre berufserfahrung in den Bereichen des Maschinen- und Fahrzeugbaus.
-                        <br>Über 15 Jahre Tätigkeit als Professor für Konstruktionstechnik an der Hochschule München.
+                        Über 10 Jahre Berufserfahrung in den Bereichen des Maschinen- und Fahrzeugbaus
+                        <br>Über 15 Jahre Tätigkeit als Professor für Konstruktionstechnik an der Hochschule München
                     </p>
                     <h3>Publikationen</h3>
                     <p>Über 50 Veröffentlichungen, sowie verschiedene Patente und Gebrauchsmuster</p>
@@ -287,7 +287,7 @@
 
         <section class="container special">
             <header class="abstand">
-                <h2>Studieninhalte die sich im Projekt wiederspiegeln</h2>
+                <h2>Studieninhalte, die im Projekt Anwendung finden</h2>
             </header>
             <div class="row">
                 <article class="6u special">
@@ -319,9 +319,15 @@
                     <a class="image featured"><img src="images/Arbeitsergebnisse/Studieninhalte/6.jpg" alt="" />
                     </a>
                     <header>
-                        <h4>Zerspanende- und Generative-Fertigung</h4>
+                        <h4>Zerspanende-Fertigung</h4>
                     </header>
-
+                </article>
+                 <article class="6u special">
+                    <a class="image featured"><img src="images/Arbeitsergebnisse/Studieninhalte/6.jpg" alt="" />
+                    </a>
+                    <header>
+                        <h4>Generative-Fertigung</h4>
+                    </header>
                 </article>
             </div>
         </section>
