--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -76,7 +76,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
