--- a/team_elektronik_software.html
+++ b/team_elektronik_software.html
@@ -95,7 +95,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
@@ -186,7 +186,7 @@
                 <article class="6u special">
                     <img class="image fit" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg" width="400" />
                     <hr />
-                    <img class="image fit" src="images/Gruppenbilder/SS16/GUI.jpg" width="400" alt="Leider fehlt hier ein Bild"/>
+                    <img class="image fit" src="images/Gruppenbilder/WS1617/GUI.JPG" width="400" alt="Leider fehlt hier ein Bild"/>
                 </article>
             </div>
             <hr id="ug_SENSORIK">
@@ -195,7 +195,7 @@
             </header>
             <div class="row">
                 <article class="6u special">
-                    <img class="image fit" src="images/Gruppenbilder/SS16/Sensorik.jpg" width="400" />
+                    <img class="image fit" src="images/Gruppenbilder/WS1617/Sensorik.JPG" width="400" />
                 </article>
                 <article class="6u special">
                     <p> Die Sensorikgruppe wurde gegründet, um durch den Crawler zusätzliche Umgebungsinformationen zu erhalten. Zusätzlich soll durch Sensorinformationen wie z.B. Abstandswerte, die Bedienung des Crawlers über Visualisierungen auf der GUI vereinfacht werden.
@@ -220,7 +220,7 @@
                     </p>
                 </article>
                 <article class="6u special">
-                    <img class="image fit" src="images/Gruppenbilder/SS16/Motorsteuerung.jpg" width="400" alt="Leider fehlt hier ein Bild"/>
+                    <img class="image fit" src="images/Gruppenbilder/WS1617/Motorsteuerung.JPG" width="400" alt="Leider fehlt hier ein Bild"/>
                 </article>
             </div>
             <hr id="ug_VERKABELUNG">
@@ -232,7 +232,7 @@
 
                     <p>Das Hauptaugenmerk unserer Gruppe liegt darin, eine geeignete Anordnung zu entwickeln, die eine Wartung und Montage aller in das Elektronikgehäuse zu verbauenden Hardwarekomponenten ermöglicht. Zudem werden Möglichkeiten erarbeitet, um das Gehäuse an den Crawler selbst zu integrieren.</p>
 
-                    <img class="image fit" src="#" width="400" alt="Leider fehlt hier ein Bild"/>
+                    <img class="image fit" src="images/Gruppenbilder/WS1617/Verkabelung.JPG" width="400" alt="Leider fehlt hier ein Bild"/>
                     
                 </article>
                 <article class="6u special">
@@ -289,7 +289,7 @@
                     </p>
                 </article>
                 <article class="6u special">
-                    <img class="image fit" src="#" width="400" alt="Leider fehlt hier ein Bild"/>
+                    <img class="image fit" src="images/Gruppenbilder/WS1617/ROS.jpg" width="400" alt="Leider fehlt hier ein Bild"/>
                     <img class="image fit" src="images/Arbeitsergebnisse/Team_ROS/ROS_Konzept.png" />
                 </article>
             </div>
