--- a/team_fahrwerk.html
+++ b/team_fahrwerk.html
@@ -95,7 +95,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
@@ -129,7 +129,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/SS16/Fahrwerk.jpg" alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/WS1617/Fahrwerk.JPG" alt="Leider fehlt hier ein Bild"/>
                         </article>
 
                     </section>
