--- a/team_kamerasteuerung.html
+++ b/team_kamerasteuerung.html
@@ -95,7 +95,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
@@ -129,7 +129,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/WS1516/Team_Kamera.jpg" alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/WS1617/Kamera.JPG" alt="Leider fehlt hier ein Bild"/>
                         </article>
 
                     </section>
@@ -156,7 +156,7 @@
                 <article class="6u special">
                     <article>
                         <p>
-                            Um diese anspruchsvolle Aufgabe zu bewältigen hat sich das junge Team dann in die drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin, ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es, ein Gimbal zu entwickeln, um zum einen die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so zu stabilisieren, dass ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
+                            Um diese anspruchsvolle Aufgabe zu bewältigen, hat sich das junge Team dann in die drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin, ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es, ein Gimbal zu entwickeln, um zum einen die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so zu stabilisieren, dass ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
                             <br> Ziel des Sommersemester 2015 ist es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase wird am Ende eine Spezifikation des Gesamtsystems erfolgen, wo im nächsten Semester die Umsetzung der Produktidee anknüpft. Zusätzlich wird im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
                         </p>
                     </article>
