--- a/team_organisation_finanzen.html
+++ b/team_organisation_finanzen.html
@@ -93,7 +93,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
@@ -127,7 +127,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/SS16/Finanzen.jpg" alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/WS1617/Veraltung.JPG" alt="Leider fehlt hier ein Bild"/>
                         </article>
                         <div>
                             <article>
