--- a/sponsoren.html
+++ b/sponsoren.html
@@ -94,7 +94,7 @@
                 <!--                <li>
                     <a  >Projektträger</a>
                     <ul>
-                        <li><a  >Landes Kriminal Amt</a>
+                        <li><a  >Landeskriminalamt</a>
                         </li>
                         <li><a  >Fakultät 06</a>
                         </li>
