--- a/team_transportwagen.html
+++ b/team_transportwagen.html
@@ -129,7 +129,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/WS1617/Transportwagen.JPG"S alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/SS16/Transportwagen.jpg"S alt="Leider fehlt hier ein Bild"/>
                         </article>
                         <article>
                             <img class="image fit" src="images/Arbeitsergebnisse/Team_Transportwagen/Transportwagen_v3.JPG" />
