--- a/team_kamerasteuerung.html
+++ b/team_kamerasteuerung.html
@@ -157,7 +157,7 @@
                     <article>
                         <p>
                             Um diese anspruchsvolle Aufgabe zu bewältigen, hat sich das junge Team dann in die drei Untergruppen Kamerasystem, Konstruktion und Softwareentwicklung strukturiert. Die Hauptaufgabe besteht darin, ein passendes und kostenmäßig erschwingliches Kamerasystem für die beiden Aufgaben Umgebungserkundung und Navigation zu finden. Die Aufgabe des Konstruktionsteams ist es, ein Gimbal zu entwickeln, um zum einen die Bewegung der Navigationskamera zu realisieren und zum Anderen die Kamera so zu stabilisieren, dass ein wackelfreies Bild übertragen werden kann. Die Softwareentwicklung stellt die Schnittstelle zur Bildübertragung bereit, um die Daten an die zentrale Verarbeitungseinheit des Crawlers übermittelt zu können.
-                            <br> Ziel des Sommersemester 2015 war es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase wird am Ende eine Spezifikation des Gesamtsystems erfolgen, wo im nächsten Semester die Umsetzung der Produktidee anknüpft. Zusätzlich wird im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
+                            <br> Ziel des Sommersemester 2015 war es, ein Konzept für die Navigation des Crawlers über geeignete Kameras auszuarbeiten. Nach Durchlauf der Recherchephase und Konzeptphase sollte am Ende eine Spezifikation des Gesamtsystems erfolgen, an der im nächsten Semester die Umsetzung der Produktidee anknüpfen sollte. Zusätzlich wurde im Sommersemester 2015 noch der Gimbal-Prototyp für das Umgebungskamerasystem gebaut.
                         </p>
                     </article>
                 </article>
